<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SGS4G Unlocker</string>
    <string name="text_about">This application was created by\nFernando Barillas (&#169;2012&#8211;2013)</string>
    <string name="unlock_button_text">Get Unlock Code</string>
    <string name="please_wait">Working… Please wait.</string>
    <string name="nv_data_file">/efs/root/afs/settings/nv_data.bin</string>
    <!-- outputFile and nvDataTempFile paths are relative to /sdcard -->
    <string name="output_file">/unlockcode.txt</string>
    <string name="nv_data_temp_file">/nv_data.bin</string>
    <string name="unlock_code_instructions">Instructions:\n
        1) Make sure you have an SD card inserted\n
        2) Press the button\n
        3) Grant SuperUser permissions to the app\n
        4) Wait a few seconds\n
        5) Get your unlock code\n</string>
    <string name="unlock_code_found">Your carrier unlock code was found:</string>
    <string name="unlock_code_saved">Your unlock code has been saved to:</string>
    <string name="unlock_code_not_saved">Your unlock code could not be saved to SD card</string>
    <string name="unlock_code_not_found">Your unlock code could not be found.\n\nAre you sure your phone is rooted and you have given the app SuperUser permissions?</string>
    <string name="efs_tools_instructions">These buttons allow you to create a backup and restore the backup. The backup files are created on your SD card.\n
        Instructions:\n
        1) Press EFS Backup/Restore\n
        2) Wait for the success message\n
        3) Verify that a backup has been created at\n
        /sdcard/efs_backup.tar\n
        \n
        If the backup fails, make sure you have an SD card inserted and you have busybox installed!</string>
    <string name="efs_backup_button">EFS Backup</string>
    <string name="efs_restore_button">EFS Restore</string>
    <string name="hex_unlock_instructions">Use the buttons below to unlock/lock your phone. This tool allows you to unlock your phone without having to use an unlock code.\n\n
        Always create a backup before attempting an unlock!\n\n
        Instructions:\n
        1) Create a backup\n
        2) Create a backup!\n
        3) CREATE A BACKUP!\n
        4) Press Hex Lock/Unlock\n
        5) Restart your phone</string>
    <string name="hex_unlock_result_title">Lock Status:</string>
    <string name="hex_unlock_button">Hex Unlock</string>
    <string name="hex_lock_button">Hex Lock</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_about">About</string>
    <string name="tab_unlock_code">Unlock Code</string>
    <string name="tab_hex_unlock">Hex Unlock</string>
    <string name="tab_efs_tools">Backup/Restore</string>
    <string name="title_activity_unlock_code">Unlock Code</string>
    <string name="title_activity_efs_tools">EFS Tools</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="preference_category_output_title">Text File Output</string>
    <string name="preference_output_file_title">File Output</string>
    <string name="preference_output_file_summary">Output unlock code to SD Card</string>
    <string name="preference_output_filename_default">UnlockCode.txt</string>
    <string name="preference_output_filename_dialog_title">Please enter the file name:</string>
    <string name="preference_output_filename_summary">File will be saved under\n/sdcard/&lt;filename&gt;</string>
    <string name="preference_output_filename_title">File Name</string>
    <string name="title_activity_hex_unlock">HexUnlockActivity</string>
    <string name="dialog_agreement_title">User Agreement</string>
    <string name="dialog_agreement_text">By pressing "I Accept", I acknowledge that it is my responsibility to verify that cell phone unlocking is legal under my jurisdiction, and that I accept any and all responsibility from the repercussions of unlocking my cell phone.</string>
    <string name="dialog_agreement_accept">I Accept</string>
    <string name="dialog_agreement_decline">I Decline</string>

</resources>